Bug 1659949: Fix is atom setting for elements within localized elements. r=smaug

When re-creating element prototypes for elements within localized elements we
must set the mIsAtom correctly on the prototype.

Differential Revision: https://phabricator.services.mozilla.com/D97799