dom/xul/nsXULPrototypeDocument.cpp
@@ -25,6 +25,7 @@
 #include "mozilla/dom/BindingUtils.h"
 #include "nsXULPrototypeCache.h"
 #include "mozilla/DeclarationBlock.h"
+#include "mozilla/dom/CustomElementRegistry.h"
 #include "mozilla/dom/Document.h"
 #include "mozilla/dom/Element.h"
 #include "mozilla/dom/Text.h"
@@ -478,6 +479,12 @@ void nsXULPrototypeDocument::RebuildPrototypeFromElement(
 
     protoAttr++;
   }
+
+  // Make sure the mIsAtom is correct in case this prototype element has been
+  // completely rebuilt.
+  CustomElementData* ceData = aElement->GetCustomElementData();
+  nsAtom* isAtom = ceData ? ceData->GetIs(aElement) : nullptr;
+  aPrototype->mIsAtom = isAtom;
 
   if (aDeep) {
     // We have to rebuild the prototype children from this element.
